# SerialTerminal

./: .gitignore  CMakeLists.txt  README.md
include/: que.h
src/: ser.c
